8316756: C2 EA fails with "missing memory path" when encountering unsafe_arraycopy stub call

Reviewed-by: tholenstein
Backport-of: b89172149d6a900d11630a95be7278870421b435